# common_project

./: .env.example  .gitignore  LICENSE  Offline 3D GIS Desktop App Development.md  README.md  environment.yml  gis_reference_impl.py  offline_gis.db-shm  offline_gis.db-wal  pyproject.toml  requirements-pip.txt  setup_cesium_assets.sh  setup_global_basemap.sh  setup_offline_terrain_pack.sh  status_audit.txt  test_url_direct.py
.github/workflows/: windows-installer.yml
.kiro/specs/offline-gis-rendering-fixes/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/qgis-measurement-ui-integration/: .config.kiro  bugfix.md  design.md  tasks.md
installer/: README.md  build_windows_installer.ps1
installer/constructor/win-64/: conclusion.txt  construct.yaml  create_shortcuts.ps1  post_install.bat  readme.txt  welcome.txt
packaging/windows/: OfflineGIS-Client.spec  OfflineGIS-Server.spec  OfflineGIS_Dual_Installer.iss  README.md  build_dual_apps.ps1
scripts/: BASEMAP_SETUP.md  build_windows_exe.ps1  build_windows_installer.ps1  common_project.code-workspace  download_asia_basemap.py  pack_windows_conda_env.ps1  run_titiler_local.sh  setup_cesium_assets.py  setup_cesium_assets.sh  setup_global_basemap.sh  setup_offline_terrain_pack.sh  setup_windows_desktop.ps1
scripts/pyinstaller/: client.spec  server.spec
src/core_shared/: __init__.py  auth_models.py  config.py  db_session.py
src/core_shared/config_pkg/: common_project.code-workspace  settings.py
src/core_shared/db/: models.py  session.py
src/desktop_client/: __init__.py  api_client.py  main_client.py
src/desktop_client/client_frontend/: __init__.py
src/desktop_client/gui_viewer/: __init__.py  viewer_runtime.py
src/desktop_client/web_assets/: __init__.py  (+1 more)
src/desktop_ingestion/: __init__.py  main_admin.py
src/offline_gis_app/: __init__.py  cli.py
src/server_vm/: __init__.py  main_server.py  security.py
tests/: test_api_schemas.py  test_catalog.py  test_desktop_api_client_file_urls.py  test_desktop_toolbar_contract.py  test_elevation_profile_panel.py  test_geometry.py  test_health_api.py  test_ingest_api.py  test_ingest_queue_api.py  test_metadata_extractor.py  test_polygon_completion_handler.py  test_profile_api.py  test_profile_service.py  test_qgis_measurement_ui_integration_bugfix.py  test_search_api.py  test_tile_url_builder.py
(+217 files in other folders)
