[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-3d-gis-app"
version = "0.1.0"
description = "Offline-first modular 3D GIS desktop and API stack"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.5,<3.0",
  "numpy>=1.26,<3.0",
  "titiler.application>=0.21,<1.0",
]

[project.optional-dependencies]
desktop = [
  "PySide6>=6.7,<7.0",
  "PySide6-Addons>=6.7,<7.0",
  "qtawesome>=1.3,<2.0",
]
geo = [
  "rasterio>=1.3,<2.0",
  "pyproj>=3.6,<4.0",
  "shapely>=2.0,<3.0",
  "scipy>=1.11,<2.0",
]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
