[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-3d-gis-app"
version = "0.1.0"
description = "Offline-first modular 3D GIS desktop and API stack"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.5,<3.0",
  "numpy>=1.26,<3.0",
  "titiler.application>=0.21,<1.0",
]

[project.scripts]
offline-gis-cli = "offline_gis_app.cli:main"
offline-gis-server = "offline_gis_app.client_backend.desktop.apps.server_app:main"
offline-gis-client = "offline_gis_app.client_backend.desktop.apps.client_app:main"

[project.optional-dependencies]
desktop = [
  "qtpy>=2.4,<3.0",
  "PyQt5>=5.15,<6.0",
  "PyQtWebEngine>=5.15,<6.0",
  "qtawesome>=1.3,<2.0",
]
geo = [
  "rasterio>=1.3,<2.0",
  "pyproj>=3.6,<4.0",
  "shapely>=2.0,<3.0",
  "scipy>=1.11,<2.0",
]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
offline_gis_app = [
  "client_frontend/web_assets/**/*",
  "client_frontend/icons/*",
  "db/migrations/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
